# PokerLobby

./: .mcp.json  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: settings.local.json
electron/: main.js  preload.js  solverHandler.js
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
memory-bank/docs/: implementation-guide.md  player-profiles-system.md  project-structure.md  solver-algorithms.md  solver-integration.md  texassolver-analysis.md
src/: App.tsx  index.css
src/api/: index.ts
src/components/: PostflopSolver.tsx
src/frontend/: App.tsx  main.tsx
src/frontend/components/: Icon.tsx  Layout.tsx  PageTemplate.tsx
src/frontend/components/range/: ActionSequenceBar.tsx  ActionSliders.tsx  BoardSelector.tsx  HandCell.tsx  ImportExportModal.tsx  PaintToolbar.tsx  (+6 more)
src/frontend/contexts/: ApiContext.tsx  ThemeContext.tsx
src/frontend/pages/: Home.tsx  Settings.tsx
src/frontend/styles/: global.scss
src/shared/: interfaces.ts  types.ts
src/solver/: build-native.sh
src/solver/rust/: Cargo.toml  package-lock.json  package.json  poker-solver.node  test.js
src/solver/rust/src/: action_tree.rs  alloc.rs  atomic_float.rs  bet_size.rs  bunching.rs  card.rs  file.rs  hand.rs  hand_table.rs  interface.rs  lib.rs  mutex_like.rs  node_bindings.rs  range.rs  sliceop.rs  solver.rs  utility.rs
src/solver/rust/src/game/: base.rs  evaluation.rs  interpreter.rs  mod.rs  node.rs  serialization.rs  tests.rs
src/types/: electron.d.ts
(+17 files in other folders)
