[package]
name = "poker-solver-native"
version = "0.1.0"
edition = "2021"

[lib]
name = "poker_solver"
crate-type = ["cdylib"]

[dependencies]
# Core dependencies from postflop-solver
once_cell = "1.18.0"
regex = "1.9.6"
bincode = { git = "https://github.com/bincode-org/bincode", rev = "aada4bb4cb457677a4b8e47572ae7ca8dd44927c", optional = true, features = ["derive"] }
rayon = { version = "1.8.0", optional = true }
zstd = { version = "0.12.4", optional = true, default-features = false }

# Node.js native bindings using napi-rs
napi = { version = "2", features = ["napi8"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"

[features]
default = ["bincode", "rayon", "napi"]
napi = []
custom-alloc = []
rayon = ["dep:rayon", "zstd?/zstdmt"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1